# Crowd-Reviews

./: .gitignore  manage.py  mydatabase  pyproject.toml  readme.md  requirements.txt  users.json
api/: decorators.py  jwt.py  middleware.py  schema.py  views.py
api/account/: error_codes.py  schema.py  types.py
api/auth/: exceptions.py  inputs.py  mutations.py  schema.py
api/core/: connection.py  enums.py  filters.py
api/core/types/: __init__.py  common.py  converter.py  sort_input.py
api/core/utils/: __init__.py
api/utils/: __init__.py  filters.py  sorting.py
core/: admin.py  auth_backend.py  error_codes.py  exceptions.py  fields.py  models.py  permissions.py  urls.py
core/migrations/: 0001_initial.py  0002_user_jwt_token_key.py
crowdreviews/: .env  asgi.py  settings.py  urls.py  wsgi.py
templates/graphql/: playground.html
users/: models.py
users/migrations/: 0001_initial.py  0002_auto_20220911_1524.py
